feat: create TasksSidebar component + switch LiveComponents to just Components + add EventHandlerMacro

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -134,3 +134,12 @@
     align-items: center;
     justify-content: center;
 }
+
+/* TasksSidebar */
+.tasks-sidebar-container {
+    position: absolute;
+    top: 0;
+    min-width: 20vw;
+    height: 100vh;
+    background-color: blue;
+}
