--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -141,5 +141,11 @@
     top: 0;
     min-width: 20vw;
     height: 100vh;
-    background-color: blue;
+    background-color: #EEEEEE;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.tasks-sidebar-content {
+    margin-top: 20px;
 }
