--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -150,3 +150,19 @@
 .tasks-sidebar-content > h3 {
     margin-bottom: 20px;
 }
+
+.new-task-modal-container {
+    position: absolute;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.new-task-modal-content {
+    background-color: white;
+    padding: 30px 30px;
+}
